@@ -1,0 +1,15 @@
+noinst_HEADERS = \
+	base64.h \
+	urlencoding.h \
+	XmlRpcClient.h \
+	XmlRpcDispatch.h \
+	XmlRpcException.h \
+	XmlRpc.h \
+	XmlRpcServerConnection.h \
+	XmlRpcServer.h \
+	XmlRpcServerMethod.h \
+	XmlRpcServerGetRequest.h \
+	XmlRpcSocket.h \
+	XmlRpcSource.h \
+	XmlRpcUtil.h \
+	XmlRpcValue.h
