@@ -1,21 +1,5 @@
 lib_LTLIBRARIES = librts2xmlrpc.la
 
-noinst_HEADERS = \
-	base64.h \
-	urlencoding.h \
-	XmlRpcClient.h \
-	XmlRpcDispatch.h \
-	XmlRpcException.h \
-	XmlRpc.h \
-	XmlRpcServerConnection.h \
-	XmlRpcServer.h \
-	XmlRpcServerMethod.h \
-	XmlRpcServerGetRequest.h \
-	XmlRpcSocket.h \
-	XmlRpcSource.h \
-	XmlRpcUtil.h \
-	XmlRpcValue.h
-
 librts2xmlrpc_la_SOURCES = \
 	urlencoding.cpp \
 	XmlRpcClient.cpp \
@@ -29,4 +13,4 @@ librts2xmlrpc_la_SOURCES = \
 	XmlRpcUtil.cpp \
 	XmlRpcValue.cpp
 
-librts2xmlrpc_la_CXXFLAGS = @NOVA_CFLAGS@ -I../../include
+librts2xmlrpc_la_CXXFLAGS = @NOVA_CFLAGS@ -I../../include -I../../include/xmlrpc++
